--- a/app/stylesheets/less/variables.less
+++ b/app/stylesheets/less/variables.less
@@ -178,12 +178,24 @@
 
 @content-area-border-radius: 6px;
 
+// Meta
+@meta-font-size: 13px;
+@meta-line-height: 18px;
+
 // Comments
 @comments-font-size: 13px;
 @comments-line-height: 18px;
 
 @comment-textarea-placeholder-color: #858585;
 @comment-textarea-placeholder-opacity: .5;
+
+@comment-textarea-border-color-base: @comment-textarea-placeholder-color;
+@comment-textarea-border-opacity: @comment-textarea-placeholder-opacity;
+@comment-textarea-border-color: rgba(red(@comment-textarea-border-color-base), green(@comment-textarea-border-color-base), blue(@comment-textarea-border-color-base), @comment-textarea-border-opacity);
+
+@comment-highlighted-border-color-base: @comment-textarea-placeholder-color;
+@comment-highlighted-border-opacity: .3;
+@comment-highlighted-border-color: rgba(red(@comment-highlighted-border-color-base), green(@comment-highlighted-border-color-base), blue(@comment-highlighted-border-color-base), @comment-highlighted-border-opacity);
 
 // Confirmation
 @confirmation-overlay-bg: @popup-overlay-bg;
